// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component correctly with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $94.34
  </p>
</div>
`;

exports[`should render component correctly with 2 expenses 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totalling 
    $123.43
  </p>
</div>
`;
